mc: removing confusing mention of MAX_RAM for #229